Bug 298155 - Ubuntu 12.04 & Calligra
Summary: Ubuntu 12.04 & Calligra
Status: RESOLVED FIXED
Alias: None
Product: calligrasheets
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.4.0
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Calligra Sheets (KSpread) Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-15 01:05 UTC by franmac
Modified: 2013-11-22 10:56 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description franmac 2012-04-15 01:05:55 UTC
Application: calligrasheets (2.4.0)
KDE Platform Version: 4.8.2 (4.8.2)
Qt Version: 4.8.1
Operating System: Linux 3.2.0-23-generic i686
Distribution: Ubuntu precise (development branch)

-- Information about the crash:
- What I was doing when the application crashed:

Frequent crashes - often when trying to copy/paste and in this case use Transpose function.

The crash can be reproduced every time.

-- Backtrace:
Application: Calligra Sheets (calligrasheets), signal: Segmentation fault
Using host libthread_db library "/lib/i386-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0xb76fc740 (LWP 6347))]

Thread 2 (Thread 0xb58ffb40 (LWP 6352)):
#0  0x00969416 in __kernel_vsyscall ()
#1  0x001ec380 in poll () from /lib/i386-linux-gnu/libc.so.6
#2  0x04062a8b in g_poll () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0x0405506e in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#4  0x0405552b in g_main_loop_run () from /lib/i386-linux-gnu/libglib-2.0.so.0
#5  0x05d8e0ea in ?? () from /usr/lib/i386-linux-gnu/libgio-2.0.so.0
#6  0x040786c3 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#7  0x00954d4c in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#8  0x001faace in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 1 (Thread 0xb76fc740 (LWP 6347)):
[KCrash Handler]
#7  ValueArray (this=0x8bbd6d8) at /build/buildd/calligra-2.4.0/sheets/Value.cpp:38
#8  Private (o=..., this=0x8c10c30) at /build/buildd/calligra-2.4.0/sheets/Value.cpp:101
#9  clone (this=0xbf85b410) at /usr/include/qt4/QtCore/qshareddata.h:227
#10 detach_helper (this=0xbf85b410) at /usr/include/qt4/QtCore/qshareddata.h:233
#11 detach (this=0xbf85b410) at /usr/include/qt4/QtCore/qshareddata.h:75
#12 operator-> (this=0xbf85b410) at /usr/include/qt4/QtCore/qshareddata.h:78
#13 Calligra::Sheets::Value::setFormat (this=0xbf85b40c, fmt=Calligra::Sheets::Value::fmt_String) at /build/buildd/calligra-2.4.0/sheets/Value.cpp:540
#14 0x03b2396a in Calligra::Sheets::Cell::copyFormat (this=0xbf85b5c0, cell=...) at /build/buildd/calligra-2.4.0/sheets/Cell.cpp:498
#15 0x03256587 in fillSequence (down=true, deltaSequence=..., _seqList=..., _destList=..., _srcList=...) at /build/buildd/calligra-2.4.0/sheets/commands/AutoFillCommand.cpp:679
#16 Calligra::Sheets::AutoFillCommand::fillSequence (this=<optimized out>, _srcList=..., _destList=..., _seqList=..., down=true) at /build/buildd/calligra-2.4.0/sheets/commands/AutoFillCommand.cpp:840
#17 0x03258742 in mainProcessing (this=0x8b22c10) at /build/buildd/calligra-2.4.0/sheets/commands/AutoFillCommand.cpp:760
#18 Calligra::Sheets::AutoFillCommand::mainProcessing (this=0x8b22c10) at /build/buildd/calligra-2.4.0/sheets/commands/AutoFillCommand.cpp:718
#19 0x0325157c in redo (this=0x8b22c10) at /build/buildd/calligra-2.4.0/sheets/commands/AbstractRegionCommand.cpp:115
#20 Calligra::Sheets::AbstractRegionCommand::redo (this=0x8b22c10) at /build/buildd/calligra-2.4.0/sheets/commands/AbstractRegionCommand.cpp:87
#21 0x00878922 in KUndo2QStack::push (this=0x8354478, cmd=0x8b22c18) at /build/buildd/calligra-2.4.0/libs/kundo2/kundo2stack.cpp:569
#22 0x00307e30 in KoDocument::addCommand (this=0x83584e0, command=0x8b22c18) at /build/buildd/calligra-2.4.0/libs/main/KoDocument.cpp:2751
#23 0x032ea26e in Calligra::Sheets::CanvasBase::addCommand (this=0x8887e2c, command=0x8b22c18) at /build/buildd/calligra-2.4.0/sheets/part/CanvasBase.cpp:170
#24 0x06309c3c in KoInteractionTool::mouseReleaseEvent (this=0x89f42b8, event=0xbf85b8f8) at /build/buildd/calligra-2.4.0/libs/flake/tools/KoInteractionTool.cpp:73
#25 0x033347da in Calligra::Sheets::CellToolBase::mouseReleaseEvent (this=0x89f42b8, event=0xbf85b8f8) at /build/buildd/calligra-2.4.0/sheets/ui/CellToolBase.cpp:969
#26 0x062a3b81 in KoToolProxy::mouseReleaseEvent (this=0x88bc0f0, event=0xbf85c024, point=...) at /build/buildd/calligra-2.4.0/libs/flake/KoToolProxy.cpp:309
#27 0x032ede73 in Calligra::Sheets::Canvas::mouseReleaseEvent (this=0x8887e18, event=0xbf85c024) at /build/buildd/calligra-2.4.0/sheets/part/Canvas.cpp:237
#28 0x00ebc1ac in QWidget::event (this=0x8887e18, event=0xbf85c024) at kernel/qwidget.cpp:8362
#29 0x032ed8b7 in Calligra::Sheets::Canvas::event (this=0x8887e18, e=0xbf85c024) at /build/buildd/calligra-2.4.0/sheets/part/Canvas.cpp:297
#30 0x00e61ed4 in notify_helper (e=0xbf85c024, receiver=0x8887e18, this=0x818f098) at kernel/qapplication.cpp:4559
#31 QApplicationPrivate::notify_helper (this=0x818f098, receiver=0x8887e18, e=0xbf85c024) at kernel/qapplication.cpp:4531
#32 0x00e68024 in QApplication::notify (this=0x818f098, receiver=0x8887e18, e=0xbf85c024) at kernel/qapplication.cpp:4102
#33 0x050a3b21 in KApplication::notify (this=0xbf85c844, receiver=0x8887e18, event=0xbf85c024) at ../../kdeui/kernel/kapplication.cpp:311
#34 0x00ae697e in QCoreApplication::notifyInternal (this=0xbf85c844, receiver=0x8887e18, event=0xbf85c024) at kernel/qcoreapplication.cpp:876
#35 0x00e62e95 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#36 QApplicationPrivate::sendMouseEvent (receiver=0x8887e18, event=0xbf85c024, alienWidget=0x8887e18, nativeWidget=0x8386048, buttonDown=0x17f6cf4, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3170
#37 0x00eef074 in QETWidget::translateMouseEvent (this=0x8386048, event=0xbf85c4dc) at kernel/qapplication_x11.cpp:4617
#38 0x00eedc0d in QApplication::x11ProcessEvent (this=0xbf85c844, event=0xbf85c4dc) at kernel/qapplication_x11.cpp:3732
#39 0x00f1aeac in x11EventSourceDispatch (s=0x818c350, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#40 0x04054cda in g_main_context_dispatch () from /lib/i386-linux-gnu/libglib-2.0.so.0
#41 0x040550e5 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#42 0x040551c1 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#43 0x00b19887 in QEventDispatcherGlib::processEvents (this=0x813bef0, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#44 0x00f1aaaa in QGuiEventDispatcherGlib::processEvents (this=0x813bef0, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#45 0x00ae550d in QEventLoop::processEvents (this=0xbf85c7d4, flags=...) at kernel/qeventloop.cpp:149
#46 0x00ae57a9 in QEventLoop::exec (this=0xbf85c7d4, flags=...) at kernel/qeventloop.cpp:204
#47 0x00aeaeba in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1148
#48 0x00e5fa74 in QApplication::exec () at kernel/qapplication.cpp:3820
#49 0x00d245fd in kdemain (argc=2, argv=0xbf85c954) at /build/buildd/calligra-2.4.0/sheets/part/Main.cpp:43
#50 0x0804850b in main (argc=2, argv=0xbf85c954) at /build/buildd/calligra-2.4.0/obj-i686-linux-gnu/sheets/calligrasheets_dummy.cpp:3

Reported using DrKonqi
Comment 1 Inge Wallin 2013-06-29 08:16:30 UTC
Hi franmac.  Thanks for the bug report.

Calligra 2.4 is quite old and my guess is that this bug is fixed.  could you try to reproduce the crash with 2.6 or 2.7 (out soon but available in betas already)?
Comment 2 Tomas Mecir 2013-11-10 17:32:49 UTC
Git commit 01153e8863a223439bde1d265fb0fddf29e66564 by Tomas Mecir.
Committed on 10/11/2013 at 17:30.
Pushed by mecir into branch 'master'.

Array values improvements

- Fix a crash when using array values.
- Make array values render correctly when used (ctrl+alt+enter)

M  +2    -0    sheets/Value.cpp
M  +15   -8    sheets/commands/DataManipulators.cpp
M  +1    -0    sheets/commands/DataManipulators.h

http://commits.kde.org/calligra/01153e8863a223439bde1d265fb0fddf29e66564
Comment 3 Halla Rempt 2013-11-22 10:56:05 UTC
Git commit 5a135f83206954698a3f231544162d14caa5e74f by Boudewijn Rempt, on behalf of Tomas Mecir.
Committed on 10/11/2013 at 17:30.
Pushed by rempt into branch 'calligra/2.7'.

Array values improvements

- Fix a crash when using array values.
- Make array values render correctly when used (ctrl+alt+enter)

M  +2    -0    sheets/Value.cpp
M  +15   -8    sheets/commands/DataManipulators.cpp
M  +1    -0    sheets/commands/DataManipulators.h

http://commits.kde.org/calligra/5a135f83206954698a3f231544162d14caa5e74f