Array values improvements

- Fix a crash when using array values.
- Make array values render correctly when used (ctrl+alt+enter)

BUG: 298155